--- a/sobre-nosotros/index.html
+++ b/sobre-nosotros/index.html
@@ -1,23 +1,6 @@
 <!doctype html>
 <html>
 <head>
-	!-- Meta Pixel Code -->
-	<script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];
-	s.parentNode.insertBefore(t,s)}(window, document,'script',
-	'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '378210757910737');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=378210757910737&ev=PageView&noscript=1"
-	/></noscript>
-	<!-- End Meta Pixel Code -->
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -25,11 +8,11 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="../favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css?2814">
-	<link rel="stylesheet" type="text/css" href="../style.css?9345">
-	<link rel="stylesheet" type="text/css" href="../css/animate.min.css?5536">
-	<link rel="stylesheet" type="text/css" href="../css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css?1244">
+	<link rel="stylesheet" type="text/css" href="../style.css?5904">
+	<link rel="stylesheet" type="text/css" href="../css/animate.min.css?8929">
 	<link rel="stylesheet" type="text/css" href="../css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/ionicons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Sobre Nosotros | Estudia en Instito Nikola Tesla</title>
 
@@ -57,7 +40,7 @@
 			<div class="col">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="../"><picture><source type="image/webp" srcset="../img/intlogo.webp"><img src="../img/intlogo.png" alt="logo" width="316" height="80"></picture></a>
+						<a class="navbar-brand" href="../"><picture><source type="image/webp" srcset="../img/intlogo.webp"><img src="../img/intlogo.png" alt="logo" height="80"></picture></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-13078">
 							<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon" d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 						</button>
@@ -67,13 +50,16 @@
 										<a href="../" class="nav-link a-btn ltc-458">Inicio</a>
 									</li>
 									<li class="nav-item">
-										<a href="." class="nav-link a-btn ltc-458">Sobre Nosotros</a>
+										<a href="." class="nav-link a-btn ltc-458">Nosotros</a>
 									</li>
 									<li class="nav-item">
 										<a href="../oferta/" class="nav-link a-btn ltc-458">Oferta Educativa</a>
 									</li>
 									<li class="nav-item">
 										<a href="../contacto/" class="nav-link a-btn ltc-458">Contacto</a>
+									</li>
+									<li class="nav-item">
+										<a href="../nuevo-campus/" class="nav-link a-btn ltc-458">¡Nuevo Campus!</a>
 									</li>
 								</ul>
 							</div>
@@ -108,7 +94,7 @@
 	<div class="container bloc-lg bloc-xl-lg">
 		<div class="row">
 			<div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 text-start text-lg-start">
-				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/intblanco2.webp"><img src="../img/lazyload-ph.png" data-src="../img/intblanco2.png" class="img-fluid mx-auto d-block lazyload" alt="intblanco2" width="558" height="143"></picture>
+				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/intblanco2.webp"><img src="../img/lazyload-ph.png" data-src="../img/intblanco2.png" class="img-fluid mx-auto d-block lazyload" alt="intblanco2" width="1140" height="292"></picture>
 			</div>
 		</div>
 	</div>
@@ -201,7 +187,7 @@
 								</ul><a href="../contacto/" class="btn white-btn btn-lg btn-c-4279 btn-style w-100 mt-lg-2 ms-lg-3">Inscripciones Abiertas</a>
 							</div>
 							<div class="col-md-12 offset-lg-0 col-lg-7 d-sm-block d-none">
-								<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwpreparatoria.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwpreparatoria.jpg" class="img-fluid cta-card-img mx-auto d-sm-block d-none mb-sm-5 ms-sm-1 ms-md-5 lazyload" alt="App Screenshot" width="400" height="400"></picture>
+								<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwpreparatoria.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwpreparatoria.jpg" class="img-fluid cta-card-img mx-auto d-sm-block d-none mb-sm-5 ms-sm-1 ms-md-5 lazyload" alt="App Screenshot" width="401" height="400"></picture>
 							</div>
 						</div>
 					</div>
@@ -268,10 +254,10 @@
 
 
 <!-- Additional JS -->
-<script src="../js/bootstrap.bundle.min.js?4500"></script>
-<script src="../js/blocs.min.js?3632"></script>
+<script src="../js/bootstrap.bundle.min.js?7582"></script>
+<script src="../js/blocs.min.js?3438"></script>
 <script src="../js/lazysizes.min.js" defer></script>
-<script src="../js/scrollFX.js?3401"></script>
+<script src="../js/scrollFX.js?1750"></script>
 <!-- Additional JS END -->
 
 
