--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
 <!doctype html>
 <html>
 <head>
-	<!-- Meta Pixel Code -->
-	<script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];
-	s.parentNode.insertBefore(t,s)}(window, document,'script',
-	'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '378210757910737');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=378210757910737&ev=PageView&noscript=1"
-	/></noscript>
-	<!-- End Meta Pixel Code -->
     <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
@@ -25,11 +8,11 @@
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?2814">
-	<link rel="stylesheet" type="text/css" href="style.css?9345">
-	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?5536">
-	<link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css?1244">
+	<link rel="stylesheet" type="text/css" href="style.css?5904">
+	<link rel="stylesheet" type="text/css" href="./css/animate.min.css?8929">
 	<link rel="stylesheet" type="text/css" href="./css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/ionicons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Inicio | Estudia en Instito Nikola Tesla</title>
 
@@ -67,13 +50,16 @@
 										<a href="./" class="nav-link a-btn ltc-458">Inicio</a>
 									</li>
 									<li class="nav-item">
-										<a href="./sobre-nosotros/" class="nav-link a-btn ltc-458">Sobre Nosotros</a>
+										<a href="./sobre-nosotros/" class="nav-link a-btn ltc-458">Nosotros</a>
 									</li>
 									<li class="nav-item">
 										<a href="./oferta/" class="nav-link a-btn ltc-458">Oferta Educativa</a>
 									</li>
 									<li class="nav-item">
 										<a href="./contacto/" class="nav-link a-btn ltc-458">Contacto</a>
+									</li>
+									<li class="nav-item">
+										<a href="./nuevo-campus/" class="nav-link a-btn ltc-458">¡Nuevo Campus!</a>
 									</li>
 								</ul>
 							</div>
@@ -104,16 +90,29 @@
 <!-- bloc-1 END -->
 
 <!-- bloc-2 -->
-<div class="bloc bg-v2 d-bloc none" id="bloc-2">
-	<div class="container bloc-xxl-sm bloc-xl">
-		<div class="row">
-			<div class="col offset-lg-0 align-self-end text-lg-center">
-				<h3 class="mb-4 tc-4279 lg-shadow mx-auto d-block text-lg-center text-md-center text-sm-center h3-style text-center">
-					<span class="ion ion-social-youtube-outline"></span> <a class="ltc-4279 link-bloc-2-style" href="https://www.youtube.com/watch?v=7r6g62wYNWY" target="_blank">¡Nuevo Campus Universitario 2024!</a>
-				</h3>
-				<div class="ratio animated zoomIn mt-lg-0 nonein ratio-16x9" data-appear-anim-style="zoomIn">
-					<iframe class="embed-responsive-item lazyload" src="img/lazyload-ph.png" data-src="https://www.youtube.com/embed/4IwyCIkv26M" frameborder="0" allow="picture-in-picture" allowfullscreen="">
-					</iframe>
+<div class="bloc l-bloc none d-sm-flex d-none bloc-fill-screen full-width-bloc " id="bloc-2">
+	<div class="container">
+		<div class="row voffset-clear-xs g-0">
+			<div class="col-12 col-lg-12">
+				<div id="carousel-43092" class="carousel slide" data-bs-ride="carousel">
+					<ol class="carousel-indicators">
+						<li class="active" data-bs-target="#carousel-21081" data-bs-slide-to="0">
+						</li>
+						<li data-bs-target="#carousel-43092" data-bs-slide-to="1">
+						</li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<a href="./contacto/"><img class="d-inline-block w-100" alt="slide 3" src="img/NKBANNERRecurso%2022.jpg"></a>
+							<div class="carousel-caption">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<a href="./contacto/"><img class="d-inline-block w-100" alt="NKBANNERRecurso%2023" src="img/NKBANNERRecurso%2023.jpg"></a>
+							<div class="carousel-caption">
+							</div>
+						</div>
+					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-43092" role="button" data-bs-slide="prev"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-prev-icon" d="M22,2L9,16,22,30"></path></svg><span class="visually-hidden">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-43092" role="button" data-bs-slide="next"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-next-icon" d="M10.344,2l13,14-13,14"></path></svg><span class="visually-hidden">Next</span></a>
 				</div>
 			</div>
 		</div>
@@ -121,58 +120,36 @@
 </div>
 <!-- bloc-2 END -->
 
-<!-- feature -->
-<div class="bloc full-width-bloc tc-502 bgc-4279 l-bloc" id="feature">
-	<div class="container bloc-md-sm bloc-lg-md bloc-md">
-		<div class="row g-0">
-			<div class="col-lg-6 order-md-1 order-1 order-lg-0 offset-lg-0 offset-md-0 col-md-11 order-sm-1 offset-sm-0 col-sm-11 offset-0 col-11 text-lg-center align-self-center">
-				<div id="carousel-47844" class="carousel slide custom-shadow carousel-style mx-auto d-block" data-bs-ride="carousel" data-bs-interval="3000">
+<!-- bloc-3 -->
+<div class="bloc l-bloc full-width-bloc" id="bloc-3">
+	<div class="container bloc-no-padding">
+		<div class="row voffset-clear-xs g-0">
+			<div class="col-12">
+				<div id="carousel-29802" class="carousel slide   d-sm-none d-block" data-bs-ride="carousel">
 					<ol class="carousel-indicators">
-						<li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active" data-target="#carousel-47844">
+						<li class="active" data-bs-target="#carousel-29802" data-bs-slide-to="0">
 						</li>
-						<li data-bs-target="#carousel-47844" data-bs-slide-to="1">
-						</li>
-						<li data-bs-target="#carousel-47844" data-bs-slide-to="2">
-						</li>
-						<li data-bs-target="#carousel-47844" data-bs-slide-to="3">
+						<li data-bs-target="#carousel-29802" data-bs-slide-to="1">
 						</li>
 					</ol>
 					<div class="carousel-inner" role="listbox">
 						<div class="carousel-item active">
-							<img alt="slide 2" class="d-inline-block w-100" src="img/v1.jpeg">
-							<div class="carousel-caption carousel-caption-center">
+							<a href="./contacto/"><img class="d-inline-block w-100" alt="slide 3" src="img/NKBANNERRecurso%2024.jpg"></a>
+							<div class="carousel-caption">
 							</div>
 						</div>
 						<div class="carousel-item">
-							<img class="d-inline-block w-100" alt="v2" src="img/v2.jpg">
-							<div class="carousel-caption carousel-caption-center">
+							<a href="./contacto/"><img class="d-inline-block w-100" alt="NKBANNERRecurso%2025" src="img/NKBANNERRecurso%2025.jpg"></a>
+							<div class="carousel-caption ">
 							</div>
 						</div>
-						<div class="carousel-item">
-							<img class="d-inline-block w-100" alt="v3.jpeg" src="img/v3.jpeg">
-							<div class="carousel-caption carousel-caption-center">
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img class="d-inline-block w-100" alt="v4.jpeg" src="img/v4.jpeg">
-							<div class="carousel-caption carousel-caption-center">
-							</div>
-						</div>
-					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-47844" role="button" data-bs-slide="prev"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-prev-icon" d="M22,2L9,16,22,30"></path></svg><span class="visually-hidden">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-47844" role="button" data-bs-slide="next"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-next-icon" d="M10.344,2l13,14-13,14"></path></svg><span class="visually-hidden">Next</span></a>
+					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-29802" role="button" data-bs-slide="prev"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-prev-icon" d="M22,2L9,16,22,30"></path></svg><span class="visually-hidden">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-29802" role="button" data-bs-slide="next"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-next-icon" d="M10.344,2l13,14-13,14"></path></svg><span class="visually-hidden">Next</span></a>
 				</div>
 			</div>
-			<div class="align-self-center col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center text-lg-start feature-col offset-lg-0 ms-lg-5">
-						<h2 class="feature-heading tc-458 mt-3 mb-4 h2-feature-style">
-							Construye tu futuro en Nikola Tesla
-						</h2>
-						<p class="p-style float-lg-none text-justify">
-							El Instituto Nikola Tesla, una institución educativa líder en la región, anuncia la construcción de un nuevo campus universitario en Tehuantepec, Oaxaca.<br><br>El nuevo campus ubicado en Av. Universidad en Tehuantepec, hoy se encuentra en un 50% de avance y contará con &nbsp;aulas modernas, caferería, amplio estacionamiento, canchas deportivas y un auditorio. Está previsto que su inauguración se lleve a cabo en Septiembre de 2024.<br><br>Paralelo a su inauguración, se ofertarán nuevas carreras del área de la salud como <strong>Medicina, Odontología y Nutrición</strong>. Estas carreras se suman a la oferta académica actual del Instituto, que incluye carreras como <strong>Derecho, Pedagogía y Enfermería</strong>. Esto representa un importante paso adelante para la institución, ya que permitirá brindar una educación de alta calidad a una mayor cantidad de estudiantes.<br><br><strong>¡Inscríbete y #ConstruyeTuFuturo en Nikola Tesla!</strong>
-						</p><a href="./contacto/" class="btn btn-lg float-md-none btn-c-7096">Inscripciones</a>
-					</div>
 		</div>
 	</div>
 </div>
-<!-- feature END -->
+<!-- bloc-3 END -->
 
 <!-- bloc-5 -->
 <div class="bloc bgc-3202 l-bloc" id="bloc-5">
@@ -182,7 +159,7 @@
 	<div class="container bloc-lg bloc-md-lg">
 			<div class="row mb-5 mt-2">
 				<div class="text-start mt-lg-4 offset-0 col-12">
-					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/int.webp"><img class="img-fluid img-123-style mt-lg-4 mx-auto d-block lazyload" src="img/lazyload-ph.png" data-src="img/int.png" alt="int" width="473" height="120"></picture>
+					<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/int.webp"><img class="img-fluid img-123-style mt-lg-4 mx-auto d-block lazyload" src="img/lazyload-ph.png" data-src="img/int.png" alt="int" width="1140" height="70"></picture>
 				</div>
 			</div>
 			<div class="row align-items-start">
@@ -223,12 +200,12 @@
 	<div class="container bloc-lg bloc-md-lg">
 		<div class="row mb-5 mt-2">
 			<div class="col text-start mt-lg-4">
-				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/nikolatesla.webp"><img class="img-fluid img-123-style mx-auto d-block lazyload" src="img/lazyload-ph.png" data-src="img/nikolatesla.png" alt="int" width="474" height="120"></picture>
+				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/nikolatesla.webp"><img class="img-fluid img-123-style mx-auto d-block lazyload" src="img/lazyload-ph.png" data-src="img/nikolatesla.png" alt="int" width="1140" height="70"></picture>
 			</div>
 		</div>
 		<div class="row align-items-start">
 			<div class="col-md-6">
-				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Enfemeria2.webp"><img src="img/lazyload-ph.png" data-src="img/Enfemeria2.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="558" height="558"></picture>
+				<picture><source type="image/webp" srcset="img/lazyload-ph.png" data-srcset="img/Enfemeria2.webp"><img src="img/lazyload-ph.png" data-src="img/Enfemeria2.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="1140" height="1140"></picture>
 			</div>
 			<div class="align-self-center col-md-6">
 				<h2 class="tc-458 text-center mt-5">
@@ -362,10 +339,10 @@
 
 
 <!-- Additional JS -->
-<script src="./js/bootstrap.bundle.min.js?4500"></script>
-<script src="./js/blocs.min.js?3632"></script>
+<script src="./js/bootstrap.bundle.min.js?7582"></script>
+<script src="./js/blocs.min.js?3438"></script>
 <script src="./js/lazysizes.min.js" defer></script>
-<script src="./js/scrollFX.js?7329"></script>
+<script src="./js/scrollFX.js?8568"></script>
 <!-- Additional JS END -->
 
 
