--- a/instituto-nikola-tesla/index.html
+++ b/instituto-nikola-tesla/index.html
@@ -1,35 +1,18 @@
 <!doctype html>
 <html>
 <head>
-    <!-- Meta Pixel Code -->
-	<script>
-	!function(f,b,e,v,n,t,s)
-	{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-	n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-	if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-	n.queue=[];t=b.createElement(e);t.async=!0;
-	t.src=v;s=b.getElementsByTagName(e)[0];
-	s.parentNode.insertBefore(t,s)}(window, document,'script',
-	'https://connect.facebook.net/en_US/fbevents.js');
-	fbq('init', '378210757910737');
-	fbq('track', 'PageView');
-	</script>
-	<noscript><img height="1" width="1" style="display:none"
-	src="https://www.facebook.com/tr?id=378210757910737&ev=PageView&noscript=1"
-	/></noscript>
-	<!-- End Meta Pixel Code -->
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<meta name="robots" content="index, follow">
     <link rel="shortcut icon" type="image/png" href="../favicon.png">
     
-	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css?2814">
-	<link rel="stylesheet" type="text/css" href="../style.css?9345">
-	<link rel="stylesheet" type="text/css" href="../css/animate.min.css?5536">
-	<link rel="stylesheet" type="text/css" href="../css/ionicons.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css?1244">
+	<link rel="stylesheet" type="text/css" href="../style.css?5904">
+	<link rel="stylesheet" type="text/css" href="../css/animate.min.css?8929">
 	<link rel="stylesheet" type="text/css" href="../css/all.min.css">
+	<link rel="stylesheet" type="text/css" href="../css/ionicons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
     <title>Educación Básica | Estudia en Instito Nikola Tesla</title>
 
@@ -57,7 +40,7 @@
 			<div class="col">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="../"><picture><source type="image/webp" srcset="../img/intlogo.webp"><img src="../img/intlogo.png" alt="logo" width="316" height="80"></picture></a>
+						<a class="navbar-brand" href="../"><picture><source type="image/webp" srcset="../img/intlogo.webp"><img src="../img/intlogo.png" alt="logo" height="80"></picture></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-13078">
 							<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon" d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 						</button>
@@ -67,13 +50,16 @@
 										<a href="../" class="nav-link a-btn ltc-458">Inicio</a>
 									</li>
 									<li class="nav-item">
-										<a href="../sobre-nosotros/" class="nav-link a-btn ltc-458">Sobre Nosotros</a>
+										<a href="../sobre-nosotros/" class="nav-link a-btn ltc-458">Nosotros</a>
 									</li>
 									<li class="nav-item">
 										<a href="../oferta/" class="nav-link a-btn ltc-458">Oferta Educativa</a>
 									</li>
 									<li class="nav-item">
 										<a href="../contacto/" class="nav-link a-btn ltc-458">Contacto</a>
+									</li>
+									<li class="nav-item">
+										<a href="../nuevo-campus/" class="nav-link a-btn ltc-458">¡Nuevo Campus!</a>
 									</li>
 								</ul>
 							</div>
@@ -108,12 +94,12 @@
 	<div class="container bloc-md-sm bloc-lg-md bloc-md bloc-md-lg">
 		<div class="row mb-5 mt-2">
 			<div class="col mt-lg-4 text-center align-self-center">
-				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/int.webp"><img class="img-fluid img-123-style mx-auto d-block lazyload" src="../img/lazyload-ph.png" data-src="../img/int.png" alt="int" width="473" height="120"></picture>
+				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/int.webp"><img class="img-fluid img-123-style mx-auto d-block lazyload" src="../img/lazyload-ph.png" data-src="../img/int.png" alt="int" width="1140" height="70"></picture>
 			</div>
 		</div>
 		<div class="row g-0 align-items-start">
 			<div class="col-lg-6 order-md-1 order-1 order-lg-0 offset-lg-0 offset-md-0 col-md-11 order-sm-1 offset-sm-0 col-sm-11 offset-0 col-11">
-				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwRecurso%206.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwRecurso%206.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="570" height="555"></picture>
+				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwRecurso%206.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwRecurso%206.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="1045" height="1017"></picture>
 			</div>
 			<div class="align-self-center offset-md-1 col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center text-lg-start feature-col">
 				<h2 class="feature-heading tc-458 mt-3 mb-4">
@@ -133,7 +119,7 @@
 	<div class="container bloc-md-sm bloc-lg-md bloc-md bloc-md-lg">
 		<div class="row g-0">
 			<div class="col-lg-6 order-md-1 order-1 order-lg-0 offset-lg-0 offset-md-0 col-md-11 order-sm-1 offset-sm-0 col-sm-11 offset-0 col-11">
-				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwsecundaria_1.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwsecundaria_1.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="570" height="555"></picture>
+				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwsecundaria_1.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwsecundaria_1.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="1045" height="1017"></picture>
 			</div>
 			<div class="align-self-center offset-md-1 col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center text-lg-start feature-col">
 				<h2 class="feature-heading tc-458 mt-3 mb-4">
@@ -153,7 +139,7 @@
 	<div class="container bloc-md-sm bloc-lg-md bloc-md bloc-md-lg">
 		<div class="row g-0">
 			<div class="col-lg-6 order-md-1 order-1 order-lg-0 offset-lg-0 offset-md-0 col-md-11 order-sm-1 offset-sm-0 col-sm-11 offset-0 col-11">
-				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwpreparatoria.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwpreparatoria.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="570" height="555"></picture>
+				<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/wwwpreparatoria.webp"><img src="../img/lazyload-ph.png" data-src="../img/wwwpreparatoria.jpg" class="img-fluid mx-auto d-block img-enfemeri-style custom-shadow lazyload" alt="Enfemeria2" width="1045" height="1018"></picture>
 			</div>
 			<div class="align-self-center offset-md-1 col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center text-lg-start feature-col">
 				<h2 class="feature-heading tc-458 mt-3 mb-4">
@@ -211,7 +197,7 @@
 								</ul><a href="../contacto/" class="btn white-btn btn-lg btn-c-4279 btn-style w-100 mt-lg-2 ms-lg-3">Inscripciones Abiertas</a>
 							</div>
 							<div class="col-md-12 offset-lg-0 col-lg-7 d-sm-block d-none">
-								<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/int-secundaria-amigos.webp"><img src="../img/lazyload-ph.png" data-src="../img/int-secundaria-amigos.jpg" class="img-fluid cta-card-img mx-auto d-sm-block d-none mb-sm-5 ms-sm-0 ms-md-5 lazyload" alt="App Screenshot" width="400" height="400"></picture>
+								<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/int-secundaria-amigos.webp"><img src="../img/lazyload-ph.png" data-src="../img/int-secundaria-amigos.jpg" class="img-fluid cta-card-img mx-auto d-sm-block d-none mb-sm-5 ms-sm-0 ms-md-5 lazyload" alt="App Screenshot" width="401" height="400"></picture>
 							</div>
 						</div>
 					</div>
@@ -365,10 +351,10 @@
 
 
 <!-- Additional JS -->
-<script src="../js/bootstrap.bundle.min.js?4500"></script>
-<script src="../js/blocs.min.js?3632"></script>
+<script src="../js/bootstrap.bundle.min.js?7582"></script>
+<script src="../js/blocs.min.js?3438"></script>
 <script src="../js/lazysizes.min.js" defer></script>
-<script src="../js/scrollFX.js?8599"></script>
+<script src="../js/scrollFX.js?7434"></script>
 <!-- Additional JS END -->
 
 
