--- a/nuevo-campus/index.html
+++ b/nuevo-campus/index.html
@@ -14,7 +14,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/all.min.css">
 	<link rel="stylesheet" type="text/css" href="../css/ionicons.min.css">
 	<link href='https://fonts.googleapis.com/css?family=Montserrat&display=swap&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-    <title>Licenciatura en Medico Cirujano | Estudia en Instito Nikola Tesla</title>
+    <title>Home-1</title>
 
 
     
@@ -33,14 +33,14 @@
 <!-- Main container -->
 <div class="page-container">
     
-<!-- bloc-0 -->
-<div class="bloc l-bloc animated fadeIn scroll-fx-up-out none" data-appear-anim-style="fadeIn" id="bloc-0">
-	<div class="container bloc-sm">
+<!-- bloc-1 -->
+<div class="bloc l-bloc animated fadeIn scroll-fx-up-out none" data-appear-anim-style="fadeIn" id="bloc-1">
+	<div class="container bloc-sm bloc-no-padding-lg">
 		<div class="row">
 			<div class="col">
 				<nav class="navbar navbar-light row navbar-expand-md" role="navigation">
 					<div class="container-fluid">
-						<a class="navbar-brand" href="../"><picture><source type="image/webp" srcset="../img/intlogo.webp"><img src="../img/intlogo.png" alt="logo" height="80"></picture></a>
+						<a class="navbar-brand animated fadeIn mb-lg-2" href="../" data-appear-anim-style="fadeIn"><picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/intlogo.webp"><img src="../img/lazyload-ph.png" data-src="../img/intlogo.png" alt="logo" class="lazyload" width="316" height="80"></picture></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggler navbar-toggler border-0 p-0 ms-auto me-md-0" aria-expanded="false" aria-label="Toggle navigation" data-bs-toggle="collapse" data-bs-target=".navbar-13078">
 							<span class="navbar-toggler-icon"><svg height="32" viewBox="0 0 32 32" width="32"><path class="svg-menu-icon" d="m2 9h28m-28 7h28m-28 7h28"></path></svg></span>
 						</button>
@@ -59,7 +59,7 @@
 										<a href="../contacto/" class="nav-link a-btn ltc-458">Contacto</a>
 									</li>
 									<li class="nav-item">
-										<a href="../nuevo-campus/" class="nav-link a-btn ltc-458">¡Nuevo Campus!</a>
+										<a href="." class="nav-link a-btn ltc-458">¡Nuevo Campus!</a>
 									</li>
 								</ul>
 							</div>
@@ -87,117 +87,128 @@
 		</div>
 	</div>
 </div>
-<!-- bloc-0 END -->
+<!-- bloc-1 END -->
 
-<!-- feature-2 -->
-<div class="bloc full-width-bloc tc-502 bgc-3202 l-bloc" id="feature-2">
-	<div class="container bloc-md-sm bloc-lg-md bloc-md">
-		<div class="row g-0">
-			<div class="align-self-center offset-md-1 col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center feature-col text-lg-center">
-				<img src="../img/lazyload-ph.png" data-src="../img/int-medicina.svg" class="img-fluid float-lg-none feature-icon pt-lg-3 pb-lg-3 pe-lg-2 ps-lg-2 lazyload" alt="cms icon" width="103" height="100">
-				<h1 class="feature-heading tc-458 mt-3 mb-4">
-					Licenciatura en Medico Cirujano
-				</h1>
-				<h4 class="mb-4 text-lg-center">
-					9 semestres<br>Duración: 4 años<br><br>Inicio de clases:<br>Noviembre 2023<br><br>Modalidad:<br>- Escolarizado<br>
-				</h4><a href="../downloads/medicina.pdf" class="btn btn-lg float-md-none btn-c-7096" target="_blank">Ver Mapa Curricular (PDF)</a>
-			</div>
-			<div class="col-md-12 col-lg-6 order-lg-1 offset-lg-1 order-md-1 offset-md-1 order-sm-1 offset-sm-1 order-1 offset-1">
-				<div id="carousel-46330" class="carousel slide custom-shadow" data-bs-ride="carousel" data-bs-interval="3000">
-					<ol class="carousel-indicators">
-						<li data-bs-target="#carousel-1" data-bs-slide-to="0" class="active" data-target="#carousel-46330">
-						</li>
-						<li data-bs-target="#carousel-1" data-bs-slide-to="1" data-target="#carousel-46330">
-						</li>
-					</ol>
-					<div class="carousel-inner" role="listbox">
-						<div class="carousel-item active">
-							<img class="d-inline-block w-100" alt="slide 1" src="../img/medicina.jpg">
-							<div class="carousel-caption">
-							</div>
-						</div>
-						<div class="carousel-item">
-							<img alt="slide 2" class="d-inline-block w-100" src="../img/medicina2.jpg">
-							<div class="carousel-caption">
-							</div>
-						</div>
-					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-46330" role="button" data-bs-slide="prev"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-prev-icon" d="M22,2L9,16,22,30"></path></svg><span class="visually-hidden">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-46330" role="button" data-bs-slide="next"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-next-icon" d="M10.344,2l13,14-13,14"></path></svg><span class="visually-hidden">Next</span></a>
+<!-- bloc-2 -->
+<div class="bloc bg-v2 d-bloc none" id="bloc-2">
+	<div class="container bloc-xxl-sm bloc-xl">
+		<div class="row">
+			<div class="col offset-lg-0 align-self-end text-lg-center">
+				<h3 class="mb-4 tc-4279 lg-shadow mx-auto d-block text-lg-center text-md-center text-sm-center h3-style text-center">
+					<span class="ion ion-social-youtube-outline"></span> <a class="ltc-4279 link-bloc-2-style" href="https://www.youtube.com/watch?v=7r6g62wYNWY" target="_blank">¡Nuevo Campus Universitario 2025!</a>
+				</h3>
+				<div class="ratio animated zoomIn mt-lg-0 nonein ratio-16x9" data-appear-anim-style="zoomIn">
+					<iframe class="embed-responsive-item lazyload" src="../img/lazyload-ph.png" data-src="https://www.youtube.com/embed/4IwyCIkv26M" frameborder="0" allow="picture-in-picture" allowfullscreen="">
+					</iframe>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<!-- feature-2 END -->
+<!-- bloc-2 END -->
 
-<!-- multiple-features -->
-<div class="bloc tc-426 none bgc-4580 d-bloc" id="multiple-features">
-	<div class="container bloc-md-sm bloc-lg-md bloc-lg-lg bloc-md">
-		<div class="row">
-			<div class="col-lg-12 col-md-12 text-center text-sm-start">
-				<h2 class="feature-heading tc-4279 mb-4">
-					Resumén de la carrera
-				</h2>
-				<p class="sub-heading mb-4 tc-426">
-					La Licenciatura en Médico Cirujano es una carrera que forma profesionales en el área de la salud. Los médicos son responsables de diagnosticar, tratar y prevenir enfermedades, así como de realizar procedimientos quirúrgicos.<br><br>Campos laborales:<br><br>•Médico(a) general<br>•Médico(a) especialista<br>•Investigador(a) en el área médica<br>•Docente en el área médica<br><br>Los médicos desempeñan un papel vital en el sistema de salud. Su trabajo es esencial para salvar vidas y mejorar la salud de las personas.<br><br><strong>Duración:<br></strong>9 semestres (4 años)<br><br><strong>Modalidades:<br></strong>Escolarizado<br>
-				</p><a href="../downloads/medicina.pdf" class="btn btn-lg float-md-none btn-c-7096" target="_blank">Ver Mapa Curricular (PDF)</a>
+<!-- feature -->
+<div class="bloc full-width-bloc tc-502 bgc-4279 l-bloc" id="feature">
+	<div class="container bloc-md-sm bloc-lg-md bloc-md">
+		<div class="row g-0">
+			<div class="col-lg-6 order-md-1 order-1 order-lg-0 offset-lg-0 offset-md-0 col-md-11 order-sm-1 offset-sm-0 col-sm-11 offset-0 col-11 text-lg-center align-self-center">
+				<div id="carousel-34141" class="carousel slide custom-shadow carousel-style mx-auto d-block" data-bs-ride="carousel" data-bs-interval="3000">
+					<ol class="carousel-indicators">
+						<li data-bs-target="#carousel-34141" data-bs-slide-to="0" class="active" data-target="#carousel-47844">
+						</li>
+						<li data-bs-target="#carousel-34141" data-bs-slide-to="1">
+						</li>
+						<li data-bs-target="#carousel-34141" data-bs-slide-to="2">
+						</li>
+						<li data-bs-target="#carousel-34141" data-bs-slide-to="3">
+						</li>
+					</ol>
+					<div class="carousel-inner" role="listbox">
+						<div class="carousel-item active">
+							<img alt="slide 2" class="d-inline-block w-100" src="../img/v1.jpeg">
+							<div class="carousel-caption carousel-caption-center">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-inline-block w-100" alt="v2" src="../img/v2.jpg">
+							<div class="carousel-caption carousel-caption-center">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-inline-block w-100" alt="v3.jpeg" src="../img/v3.jpeg">
+							<div class="carousel-caption carousel-caption-center">
+							</div>
+						</div>
+						<div class="carousel-item">
+							<img class="d-inline-block w-100" alt="v4.jpeg" src="../img/v4.jpeg">
+							<div class="carousel-caption carousel-caption-center">
+							</div>
+						</div>
+					</div><a class="carousel-nav-controls carousel-control-prev" href="#carousel-34141" role="button" data-bs-slide="prev"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-prev-icon" d="M22,2L9,16,22,30"></path></svg><span class="visually-hidden">Previous</span></a><a class="carousel-nav-controls carousel-control-next" href="#carousel-34141" role="button" data-bs-slide="next"><svg width="26" height="26" viewBox="0 0 32 32"><path class="carousel-nav-icon carousel-next-icon" d="M10.344,2l13,14-13,14"></path></svg><span class="visually-hidden">Next</span></a>
+				</div>
 			</div>
+			<div class="align-self-center col-md-10 col-lg-4 col-sm-10 offset-sm-1 col-10 offset-1 order-md-0 text-center text-lg-start feature-col offset-lg-0 ms-lg-5">
+						<h2 class="feature-heading tc-458 mt-3 mb-4 h2-feature-style">
+							Construye tu futuro en Nikola Tesla
+						</h2>
+						<p class="p-style float-lg-none text-justify">
+							El Instituto Nikola Tesla, una institución educativa líder en la región, anuncia la construcción de un nuevo campus universitario en Tehuantepec, Oaxaca.<br><br>El nuevo campus ubicado en Av. Universidad en Tehuantepec, hoy se encuentra en un 50% de avance y contará con &nbsp;aulas modernas, caferería, amplio estacionamiento, canchas deportivas y un auditorio. Está previsto que su inauguración se lleve a cabo en Septiembre de 2024.<br><br>Paralelo a su inauguración, se ofertarán nuevas carreras del área de la salud como <strong>Medicina, Odontología y Nutrición</strong>. Estas carreras se suman a la oferta académica actual del Instituto, que incluye carreras como <strong>Derecho, Pedagogía y Enfermería</strong>. Esto representa un importante paso adelante para la institución, ya que permitirá brindar una educación de alta calidad a una mayor cantidad de estudiantes.<br><br><strong>¡Inscríbete y #ConstruyeTuFuturo en Nikola Tesla!</strong>
+						</p><a href="../contacto/" class="btn btn-lg float-md-none btn-c-7096">Inscripciones</a>
+					</div>
 		</div>
 	</div>
 </div>
-<!-- multiple-features END -->
+<!-- feature END -->
 
-<!-- bloc-23 -->
-<div class="bloc tc-426 none bgc-4279 l-bloc" id="bloc-23">
-	<div class="bloc-shape-divider bloc-divider-flip-y bloc-divider-top">
-		<svg class="svg-divider bloc-divider-t-fill" fill-rule="evenodd" preserveAspectRatio="none" viewBox="0 0 1000 250"><path d="M0,0S88.458,218,500,218,1000,0,1000,0V250H0V0Z"></path></svg>
-	</div>
-	<div class="container bloc-md-sm bloc-lg-md bloc-md bloc-lg-lg">
-			<div class="row">
-				<div class="col">
-					<div class="cta-card primary-gradient-bg custom-shadow text-lg-start pb-lg-5 mt-lg-5 mt-sm-5 mt-5">
-						<div class="row g-0">
-							<div class="col-lg-5 col-md-12 text-center text-lg-start feature-col">
-								<h1 class="feature-heading tc-4279 mt-md-0 mt-lg-0 mt-3 mb-4 mx-auto d-block text-lg-center h2-style mb-lg-4">
-									¡Estudia Medicina en la Nikola!
-								</h1>
-								<ul>
-									<li>
-										<h6 class="tc-4279 mb-lg-4">
-											Colegiaturas asequibles
-										</h6>
-									</li>
-									<li>
-										<h6 class="tc-4279 mb-lg-4">
-											Modalidad cuatrimestral
-										</h6>
-									</li>
-									<li>
-										<h6 class="tc-4279 mb-lg-4">
-											Termina en 2 años 9 meses
-										</h6>
-									</li>
-									<li>
-										<h6 class="tc-4279 mb-lg-4">
-											Prácticas profesionales
-										</h6>
-									</li>
-									<li>
-										<h6 class="tc-4279 mb-lg-4">
-											Trabajo de campo
-										</h6>
-									</li>
-								</ul><a href="../contacto/" class="btn white-btn btn-lg btn-c-4279 btn-style w-100 mt-lg-2 ms-lg-3">¡Informes aquí!</a>
-							</div>
-							<div class="col-md-12 offset-lg-0 col-lg-7 d-sm-block d-none">
-								<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/medicina.webp"><img src="../img/lazyload-ph.png" data-src="../img/medicina.jpg" class="img-fluid cta-card-img mx-auto d-sm-block d-none mb-md-5 ms-md-5 mb-sm-5 ms-sm-2 lazyload" alt="App Screenshot" width="401" height="400"></picture>
-							</div>
+<!-- bloc-8 -->
+<div class="bloc l-bloc" id="bloc-8">
+	<div class="container bloc-lg">
+		<div class="row">
+			<div class="col">
+				<div class="cta-card primary-gradient-bg custom-shadow pb-lg-5">
+					<div class="row g-0">
+						<div class="col-lg-5 col-md-12 text-center text-lg-start feature-col">
+							<h1 class="feature-heading tc-4279 mt-md-0 mt-lg-0 mt-3 mb-4 mx-auto d-block text-lg-center h2-style mb-lg-4">
+								¡Se parte de Nikola!
+							</h1>
+							<ul>
+								<li>
+									<h6 class="tc-4279 mb-lg-4">
+										Colegiaturas asequibles
+									</h6>
+								</li>
+								<li>
+									<h6 class="tc-4279 mb-lg-4">
+										Admisiones todo el año
+									</h6>
+								</li>
+								<li>
+									<h6 class="tc-4279 mb-lg-4">
+										Validación de materias
+									</h6>
+								</li>
+								<li>
+									<h6 class="tc-4279 mb-lg-4">
+										Gran ambiente escolar
+									</h6>
+								</li>
+								<li>
+									<h6 class="tc-4279 mb-lg-4">
+										Excelente ubicación e instalaciones
+									</h6>
+								</li>
+							</ul><a href="../contacto/" class="btn white-btn btn-lg btn-c-4279 btn-style w-100 mt-lg-2 ms-lg-3">Inscripciones Abiertas</a>
+						</div>
+						<div class="col-md-12 offset-lg-0 col-lg-7 d-sm-block d-none">
+							<picture><source type="image/webp" srcset="../img/lazyload-ph.png" data-srcset="../img/int-secundaria-amigos.webp"><img src="../img/lazyload-ph.png" data-src="../img/int-secundaria-amigos.jpg" class="img-fluid img-bloc-8-style mx-auto mb-md-5 mb-sm-5 d-sm-block d-none lazyload" alt="App Screenshot" width="400" height="400"></picture>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+	</div>
 </div>
-<!-- bloc-23 END -->
+<!-- bloc-8 END -->
 
 <!-- ScrollToTop Button -->
 <button aria-label="Scroll to top button" class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1',this)"><svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" viewBox="0 0 32 32"><path class="scroll-to-top-btn-icon" d="M30,22.656l-14-13-14,13"/></svg></button>
@@ -242,7 +253,7 @@
 			<div class="col-md-3 col-sm-6 mb-3 col-lg-4">
 					<h4 class="text-sm-start text-start tc-4279 mb-4">
 						Instituto de Estudios Superiores Nikola Tesla
-					</h4><a href="../derecho/" class="a-btn a-block link-secundaria-style">Derecho</a><a href="../licenciartura-en-enfermeria/" class="a-btn a-block link-primaria-style">Enfermería</a><a href="." class="a-btn a-block link-style">Médico Cirujano</a><a href="../nutricion/" class="a-btn a-block link-style">Nutrición</a><a href="../odontologia/" class="a-btn a-block link-style">Odontología</a><a href="../pedagogia/" class="a-btn a-block link-style">Pedagogía</a><a href="../posgrado-enfermería-quirúrgica/" class="a-btn a-block link-style">Enfermería Quirúrgica</a><a href="../posgrado-educación/" class="a-btn a-block link-style">Maestría en&nbsp;Educación</a>
+					</h4><a href="../derecho/" class="a-btn a-block link-secundaria-style">Derecho</a><a href="../licenciartura-en-enfermeria/" class="a-btn a-block link-primaria-style">Enfermería</a><a href="../medico-cirujano/" class="a-btn a-block link-style">Médico Cirujano</a><a href="../nutricion/" class="a-btn a-block link-style">Nutrición</a><a href="../odontologia/" class="a-btn a-block link-style">Odontología</a><a href="../pedagogia/" class="a-btn a-block link-style">Pedagogía</a><a href="../posgrado-enfermería-quirúrgica/" class="a-btn a-block link-style">Enfermería Quirúrgica</a><a href="../posgrado-educación/" class="a-btn a-block link-style">Maestría en&nbsp;Educación</a>
 				</div>
 		</div>
 	</div>
@@ -259,7 +270,7 @@
 <script src="../js/bootstrap.bundle.min.js?7582"></script>
 <script src="../js/blocs.min.js?3438"></script>
 <script src="../js/lazysizes.min.js" defer></script>
-<script src="../js/scrollFX.js?3518"></script>
+<script src="../js/scrollFX.js?1787"></script>
 <!-- Additional JS END -->
 
 
